# parallel-nqueens-problem-python

./: .gitignore  CMakeLists.txt  README.md  solutions.txt
src/: nqueens.cc
